<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Galaxy</string>
    <string name="header_category">Galaxy</string>
    <string name="title">Galaxy</string>
    <string name="title_clipboard_share">Copy to Clipboard</string>
    <string name="clipboard_notification">Copied to clipboard</string>
    <string name="header_summary">@null</string>
    <string name="menu_main_activity_change_locale">Locale</string>
    <string name="cosmic_version">Cosmic-OS version</string>
    <string name="cosmic_version_default">Unknown</string>
    <string name="header_category_personalization">UI settings</string>
    <string name="custom_title">Galaxy</string>
    <string name="cosmic_title">Cosmic-OS Settings</string>
    <string name="galaxy_settings_title">Categories</string>
    <string name="ok">OK</string>
    <string name="reset">Reset</string>
    <string name="attention">Attention</string>
    <string name="enabled">Enabled</string>
    <string name="default_string">Default</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="choose_app">Choose app</string>
    <string name="empty_title">Empty</string>
    <string name="normal_title">Normal</string>
    <string name="hidden_title">Hidden</string>
    <string name="position_title">Position</string>
    <string name="position_right_title">Right</string>
    <string name="position_centered_title">Centered</string>
    <string name="help">Help</string>
    <string name="reset_message">Reset all entries to default?</string>
    <string name="profiles_add">Add...</string>
    <string name="profile_choose_app">Choose app</string>
    <string name="profile_reset_title">Reset</string>
    <string name="show_title">Show</string>
    <string name="text_title">Text</string>
    <string name="icon_title">Icon</string>
    <string name="color_title">Color</string>
    <string name="colors_title">Colors</string>
    <string name="statusbar_bar_title">Statusbar options</string>
    <string name="statusbar_bar_summary">Adjust items like battery,clock,icons,and colors</string>
    <string name="clock_category">Clock</string>
    <string name="battery_category">Battery</string>
    <string name="icon_category">Icons</string>
    <string name="extra_category">Extras</string>
    <string name="traffic_category">Network Traffic</string>
    <string name="statusbar_items_category">Statusbar items</string>
    <string name="logo_category">Cosmic-OS Logo</string>
    <string name="clock_settings_title">Clock settings</string>
    <string name="clock_settings_summary">Custom clock and date options</string>
    <string name="clock_title_enable">Alignment</string>
    <string name="status_bar_show_clock_title">Show clock and date</string>
    <string name="status_bar_clock_seconds_title">Show seconds</string>
    <string name="status_bar_am_pm_title">AM/PM</string>
    <string name="status_bar_am_pm_info">24-hour clock is enabled</string>
    <string name="right_clock">Right clock</string>
    <string name="center_clock">Center clock</string>
    <string name="left_clock">Left clock</string>
    <string name="clock_date_display">Date</string>
    <string name="clock_date_style">Date style</string>
    <string name="clock_date_position">Date position</string>
    <string name="clock_date_format">Date format</string>
    <string name="clock_date_string_edittext_title">Must be in DateFormat eg. MM/dd/yy</string>
    <string name="clock_date_string_edittext_summary">Enter string</string>
    <string name="clock_date_right">Right of time</string>
    <string name="clock_date_left">Left of time</string>
    <string name="clock_am_pm_date_normal">Normal</string>
    <string name="clock_am_pm_date_small">Small</string>
    <string name="clock_am_pm_date_none">Hidden</string>
    <string name="clock_date_style_lowercase">Lowercase</string>
    <string name="clock_date_style_uppercase">Uppercase</string>
    <string name="clock_date_format_custom">Custom java format</string>
    <string name="battery_style_title">Style</string>
    <string name="battery_percent_title">Show percent</string>
    <string name="battery_percent_none">Never</string>
    <string name="battery_percent_always">Always</string>
    <string name="battery_percent_expanded">Expanded</string>
    <string name="statusbar_percent_inside_title">Percent overlay</string>
    <string name="statusbar_percent_inside_summary">Display percent on top of the the battery image</string>
    <string name="statusbar_charging_image_title">Charging indicator</string>
    <string name="statusbar_category_charging_title">Charging</string>
    <string name="statusbar_charging_image_summary">Display bolt indicator while charging. Hides percent overlay</string>
    <string name="statusbar_battery_charging_color_title">Color</string>
    <string name="ticker_screen_title">Ticker</string>
    <string name="ticker_title">Status Bar Ticker</string>
    <string name="ticker_screen_summary">Customize the ticker style</string>
    <string name="ticker_summary">Enable the old status bar ticker</string>
    <string name="carrier_label_settings_title">Carrier Label</string>
    <string name="carrier_label_settings_summary">Customize the carrier label</string>
    <string name="custom_carrier_label_title">Custom carrier label</string>
    <string name="custom_carrier_label_explain">Please enter a new label. Leave blank to revert to stock label.</string>
    <string name="custom_carrier_label_notset">Custom label currently not set</string>
    <string name="show_carrier_title">Carrier label</string>
    <string name="show_carrier_disabled">Disabled</string>
    <string name="show_carrier_keyguard">Lockscreen only</string>
    <string name="show_carrier_statusbar">Statusbar only</string>
    <string name="show_carrier_enabled">Lockscreen &amp; statusbar</string>
    <string name="status_bar_cosmic_logo_title">Cosmic-OS Logo</string>
    <string name="status_bar_cosmic_logo_keyguard_title">Show on Lock Screen</string>
    <string name="status_bar_cosmic_logo_color">Logo Color</string>
    <string name="status_bar_cosmic_logo_color_dark_mode">Logo Color Dark Mode</string>
    <string name="status_bar_cosmic_logo_position">Location</string>
    <string name="logo_cat_notification_icons_title">Notification Icons</string>
    <string name="logo_hide_logo_title">Hide</string>
    <string name="logo_hide_logo_summary">Enable to choose a number of visible notification icons to hide the Cosmic-OSo logo on the status bar</string>
    <string name="logo_number_of_notification_icons_title">Number of notification icons</string>
    <string name="notification_title">Notification options</string>
    <string name="breathing_notifications_category">Breathing Notifications</string>
    <string name="missed_call_breath_title">Breathing Missed Call</string>
    <string name="missed_call_breath_summary">Will give your missed call notifications a breathing effect in the statusbar</string>
    <string name="voicemail_breath_title">Breathing Voicemail</string>
    <string name="voicemail_breath_summary">Will give your voicemail notifications a breathing effect in the statusbar</string>
    <string name="sms_breath_title">Breathing SMS</string>
    <string name="sms_breath_summary">Will give your SMS notifications a breathing effect in the statusbar</string>
    <string name="tile_category">Tile Options</string>
    <string name="sysui_qqs_count_title">Small quick tiles count</string>
    <string name="qs_advanced_data_title">Advanced data tile</string>
    <string name="qs_advanced_data_summary">Enable one tap action to enable or disable data</string>
    <string name="qs_bt_easy_toggle_title">Bluetooth easy toggle</string>
    <string name="qs_bt_easy_toggle_summary">Makes it so one click will turn Bluetooth on or off instead of taking you to settings</string>
    <string name="quick_settings_vibrate_title">Vibrate on touch</string>
    <string name="quick_settings_vibrate_summary">Vibrate when touching tiles</string>
    <string name="qs_tile_animation_style_title">Tiles animation style</string>
    <string name="qs_tile_animation_duration_title">Tiles animation duration</string>
    <string name="qs_tile_animation_interpolator_title">Tiles animation interpolator</string>
    <string name="qs_cat_portrait_title">Portrait</string>
    <string name="qs_cat_landscape_title">Landscape</string>
    <string name="qs_rows_title">Rows</string>
    <string name="qs_columns_title">Columns</string>
    <string name="powermenu_category">Power button</string>
    <string name="powermenu_dialog_dim">Dialog dim background amount</string>
    <string name="power_menu_title">Advanced power menu</string>
    <string name="omniswitch_category">OmniSwitch</string>
    <string name="recents_use_omniswitch_title">Use for recents</string>
    <string name="recents_use_omniswitch_summary">Use OmniSwitch instead of default recents view</string>
    <string name="omniswitch_start_settings_title">Settings</string>
    <string name="omniswitch_start_settings_summary">Open OmniSwitch settings</string>
    <string name="options_category">Various Options</string>
    <string name="media_art_title">Media cover art</string>
    <string name="media_art_summary">Enable media cover art on the lockscreen</string>
    <string name="hide_lockscreen_clock_title">Show lockscreen clock</string>
    <string name="hide_lockscreen_date_title">Show lockscreen date</string>
    <string name="hide_lockscreen_alarm_title">Show lockscreen alarm</string>
    <string name="lock_clock_font_title">Lockscreen clock font</string>
    <string name="lock_clock_font_summary">Change the default font of the lockscreen clock widget</string>
    <string name="fprint_sucess_vib_title">Fingerprint authentication vibration</string>
    <string name="fprint_sucess_vib_summary">Vibrate on successful fingerprint authentication</string>
    <string name="lockscreen_enable_power_menu_title">Show power menu lock screen</string>
    <string name="lockscreen_enable_power_menu_summary">This option will only disable the power menu on secure lock screens</string>
    <string name="system_category">System Settings</string>
    <string name="display_color_title">Screen color &amp; appearance</string>
    <string name="display_color_summary">screen color controls and night mode</string>
    <string name="power_notification_title">Power notification controls</string>
    <string name="power_notification_summary">Advanced notification controls and information</string>
    <string name="force_expanded_notifications_title">Force Expanded Notifications</string>
    <string name="force_expanded_notifications_summary">Available only for apps that support expanded notifications</string>
    <string name="flashlight_notification_title">Flashlight notification</string>
    <string name="flashlight_notification_summary">Enable notificiation for when the flashlight is on</string>
    <string name="disable_fc_notifications_title">Diable FC Notifications</string>
    <string name="disable_fc_notifications_summary">This will hide all force close notificaitons</string>
    <string name="keyguard_torch_title">Lockscreen torch</string>
    <string name="keyguard_torch_summary">Longpress power button with screen off turns on torch</string>
    <string name="wakelockblocker_category">Wakelock Blocker</string>
    <string name="media_scanner_on_boot_title">MediaScanner behavior on boot</string>
    <string name="toast_icon_title">Toast icon</string>
    <string name="toast_icon_summary">Display the app icon corresponding with the toast</string>
    <string name="pref_scrollingcache_title">Scrolling cache</string>
    <string name="pref_scrollingcache_summary">Scrolling cache may improve scrolling performance at the cost of memory</string>
</resources>