<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2016 Cosmic-OS Project

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/options_category" >

         <com.cosmic.galaxy.preference.SystemSettingSwitchPreference
            android:key="show_lockscreen_clock"
            android:title="@string/hide_lockscreen_clock_title"
            android:defaultValue="true" />

        <ListPreference
            android:key="lock_clock_fonts"
            android:title="@string/lock_clock_font_title"
            android:dialogTitle="@string/lock_clock_font_title"
            android:entries="@array/lock_clock_fonts_entries"
            android:entryValues="@array/lock_clock_fonts_values"
            android:summary="@string/lock_clock_font_summary"
            android:dependency="show_lockscreen_clock"
            android:persistent="false" />

         <com.cosmic.galaxy.preference.SystemSettingSwitchPreference
            android:key="show_lockscreen_date"
            android:title="@string/hide_lockscreen_date_title"
            android:defaultValue="true" />

         <com.cosmic.galaxy.preference.SystemSettingSwitchPreference
            android:key="show_lockscreen_alarm"
            android:title="@string/hide_lockscreen_alarm_title"
            android:defaultValue="true" />

         <com.cosmic.galaxy.preference.SystemSettingSwitchPreference
            android:key="lockscreen_enable_power_menu"
            android:title="@string/lockscreen_enable_power_menu_title"
            android:summary="@string/lockscreen_enable_power_menu_summary"
            android:defaultValue="true" />

         <com.cosmic.galaxy.preference.SystemSettingSwitchPreference
            android:key="fingerprint_success_vib"
            android:title="@string/fprint_sucess_vib_title"
            android:summary="@string/fprint_sucess_vib_summary"
            android:defaultValue="true" />

         <com.cosmic.galaxy.preference.SystemSettingSwitchPreference
            android:key="lockscreen_media_metadata"
            android:title="@string/media_art_title"
            android:summary="@string/media_art_summary"
            android:defaultValue="true" />

</PreferenceScreen>

