<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2016 Cosmic-OS Project

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/tile_category" >

    <ListPreference
        android:dialogTitle="@string/sysui_qqs_count_title"
        android:entries="@array/sysui_qqs_count_entries"
        android:entryValues="@array/sysui_qqs_count_values"
        android:key="sysui_qqs_count_key"
        android:title="@string/sysui_qqs_count_title" />

    <ListPreference
        android:key="qs_tile_animation_style"
        android:title="@string/qs_tile_animation_style_title"
        android:entries="@array/qs_tile_animation_style_entries"
        android:entryValues="@array/qs_tile_animation_style_values"
        android:persistent="false" />

    <ListPreference
        android:key="qs_tile_animation_duration"
        android:title="@string/qs_tile_animation_duration_title"
        android:entries="@array/qs_tile_animation_duration_entries"
        android:entryValues="@array/qs_tile_animation_duration_values"
        android:persistent="false" />

    <ListPreference
        android:key="qs_tile_animation_interpolator"
        android:title="@string/qs_tile_animation_interpolator_title"
        android:entries="@array/qs_tile_animation_interpolator_entries"
        android:entryValues="@array/qs_tile_animation_interpolator_values"
        android:persistent="false" />

    <com.cosmic.galaxy.preference.SecureSettingSwitchPreference
        android:key="qs_data_advanced"
        android:title="@string/qs_advanced_data_title"
        android:summary="@string/qs_advanced_data_summary"
        android:defaultValue="false" />

    <com.cosmic.galaxy.preference.SystemSettingSwitchPreference
        android:key="qs_bt_easy_toggle"
        android:title="@string/qs_bt_easy_toggle_title"
        android:summary="@string/qs_bt_easy_toggle_summary"
        android:defaultValue="false" />

    <com.cosmic.galaxy.preference.SystemSettingSwitchPreference
        android:key="quick_settings_vibrate"
        android:title="@string/quick_settings_vibrate_title"
        android:summary="@string/quick_settings_vibrate_summary"
        android:defaultValue="false"/>

    <PreferenceCategory
        android:key="qs_cat_portrait"
        android:title="@string/qs_cat_portrait_title">

        <ListPreference
            android:key="qs_rows_portrait"
            android:title="@string/qs_rows_title"
            android:entries="@array/qs_rows_portrait_entries"
            android:entryValues="@array/qs_rows_portrait_values" />

        <ListPreference
            android:key="qs_columns_portrait"
            android:title="@string/qs_columns_title"
            android:entries="@array/qs_columns_portrait_entries"
            android:entryValues="@array/qs_columns_portrait_values" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="qs_cat_landscape"
        android:title="@string/qs_cat_landscape_title">

        <ListPreference
            android:key="qs_rows_landscape"
            android:title="@string/qs_rows_title"
            android:entries="@array/qs_rows_landscape_entries"
            android:entryValues="@array/qs_rows_landscape_values" />

        <ListPreference
            android:key="qs_columns_landscape"
            android:title="@string/qs_columns_title"
            android:entries="@array/qs_columns_landscape_entries"
            android:entryValues="@array/qs_columns_landscape_values" />

    </PreferenceCategory>

</PreferenceScreen>

