<?xml version="1.0" encoding="UTF-8"?>
<!--
     Copyright (C) 2016 Brett Rogers

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/status_bar_cosmic_logo_title">

    <SwitchPreference
        android:key="status_bar_cosmic_logo_show"
        android:title="@string/status_bar_cosmic_logo_title" />

    <SwitchPreference
        android:key="status_bar_cosmic_logo_show_on_lock_screen"
        android:title="@string/status_bar_cosmic_logo_keyguard_title" />

    <ListPreference
        android:key="status_bar_cosmic_logo_style"
        android:title="@string/status_bar_cosmic_logo_position"
        android:dialogTitle="@string/status_bar_cosmic_logo_position"
        android:entries="@array/status_bar_logo_position_entries"
        android:entryValues="@array/status_bar_logo_position_values" />

    <PreferenceCategory
        android:key="cosmic_logo_cat_color"
        android:title="@string/color_title">

        <net.cosmic.colorpicker.preference.ColorPickerPreference
            android:key="status_bar_cosmic_logo_color"
            android:title="@string/status_bar_cosmic_logo_color"
            android:defaultValue="0xffffffff" />

        <net.cosmic.colorpicker.preference.ColorPickerPreference
            android:key="status_bar_cosmic_logo_color_dark_mode"
            android:title="@string/status_bar_cosmic_logo_color_dark_mode"
            android:defaultValue="0xff000000" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="logo_cat_notification_icons"
        android:title="@string/logo_cat_notification_icons_title">

        <SwitchPreference
            android:key="logo_hide_logo"
            android:title="@string/logo_hide_logo_title"
            android:summary="@string/logo_hide_logo_summary"
            android:persistent="false" />

        <ListPreference
            android:key="logo_number_of_notification_icons"
            android:title="@string/logo_number_of_notification_icons_title"
            android:entries="@array/logo_number_of_notifications_entries"
            android:entryValues="@array/logo_number_of_notifications_values" />

    </PreferenceCategory>

</PreferenceScreen>
