<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2016 Cosmic-OS Project

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/system_category" >

    <PreferenceScreen
            android:title="@string/display_color_title"
            android:summary="@string/display_color_summary">
        <intent android:action="android.intent.action.MAIN"
            android:targetPackage="com.android.systemui"
            android:targetClass="com.android.systemui.tuner.ColorAndAppearanceActivity" />
    </PreferenceScreen>

        <ListPreference
             android:key="media_scanner_on_boot"
             android:title="@string/media_scanner_on_boot_title"
             android:entries="@array/media_scanner_on_boot_entries"
             android:entryValues="@array/media_scanner_on_boot_values"
             android:persistent="false" />
			 
		<ListPreference
             android:key="pref_scrollingcache"
             android:dialogTitle="@string/pref_scrollingcache_title"
             android:title="@string/pref_scrollingcache_title"
             android:summary="@string/pref_scrollingcache_summary"
             android:entries="@array/entries_scrollingcache"
             android:entryValues="@array/values_scrollingcache" /> 

        <com.cosmic.galaxy.preference.SystemSettingSwitchPreference
            android:key="toast_icon"
            android:title="@string/toast_icon_title"
            android:summary="@string/toast_icon_summary"
            android:defaultValue="false" />

        <Preference
            android:key="wakelockblocker"
            android:fragment="com.cosmic.galaxy.advanced.WakelockBlocker"
            android:title="@string/wakelockblocker_category" />

</PreferenceScreen>

