<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2015 Android Open Source Illusion Project

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/powermenu_category" >

    <PreferenceScreen
        android:key="power_menu"
        android:title="@string/power_menu_title"
        android:fragment="com.cosmic.galaxy.buttons.PowerMenuFragment" />

    <com.cosmic.galaxy.preference.SystemSettingSwitchPreference
        android:key="keyguard_toggle_torch"
        android:title="@string/keyguard_torch_title"
        android:summary="@string/keyguard_torch_summary"
        android:defaultValue="false" />

     <com.cosmic.galaxy.preference.CustomSeekBarPreference
        android:key="power_reboot_dialog_dim"
        android:title="@string/powermenu_dialog_dim"
        android:max="100"
        settings:min="0"
        settings:units=""
        android:persistent="false" />

</PreferenceScreen>

