<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2015 Android Open Source Illusion Project

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/recent_category" >

    <PreferenceCategory
        android:id="@+id/omniswitch_section"
        android:title="@string/omniswitch_category" >

         <PreferenceScreen
            android:key="omniswitch"
            android:title="@string/omniswitch_category" >
            <intent
                android:action="android.intent.action.MAIN"
                android:targetPackage="org.omnirom.omniswitch"
                android:targetClass="org.omnirom.omniswitch.SettingsActivity" />
         </PreferenceScreen>

        <SwitchPreference
            android:key="recents_use_omniswitch"
            android:title="@string/recents_use_omniswitch_title"
            android:summary="@string/recents_use_omniswitch_summary"
            android:persistent="false" />

        <Preference
            android:key="omniswitch_start_settings"
            android:title="@string/omniswitch_start_settings_title"
            android:summary="@string/omniswitch_start_settings_summary"
            android:persistent="false" />
    </PreferenceCategory>

</PreferenceScreen>

